--- a/app/src/main/res/values-w320dp/dimens.xml
+++ b/app/src/main/res/values-w320dp/dimens.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <integer name="home_edit_ems">10</integer>
+    <integer name="burn_dodge_label_ems">6</integer>
+    <dimen name="burn_dodge_field_margin">4dp</dimen>
+    <dimen name="burn_dodge_target_end_padding">2dp</dimen>
+    <dimen name="burn_dodge_adj_button_edge">36dp</dimen>
+    <dimen name="burn_dodge_adj_button_margin">4dp</dimen>
     <dimen name="paper_edit_filter_grade_label_margin">26dp</dimen>
 </resources>
