Change behavior of stop fractions to better match expected user behaviort
Forked the Apache Commons Math Fractions class, to add the ability to
create an "unreduced" fraction.

Moved the burn/dodge stops adjustment handling from the Fragment class
into the ViewModel class.

Made the adjustments change the numerator, without awkward
fraction-reducing behavior while incrementing/decrementing.

Added the ability to construct constrained fractions, which limit the
allowed denominators to ones the user is actually able to work with.
This often includes finding a "closest match" (rather than an exact
match), with special cases to keep sane zero and whole number handling.

Added numerous unit tests to cover a lot of the cases these new features
and utility functions bring up.

--- a/app/src/main/res/layout/dialog_burn_dodge.xml
+++ b/app/src/main/res/layout/dialog_burn_dodge.xml
@@ -100,7 +100,8 @@
                     app:iconGravity="textStart"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:icon="@drawable/ic_dec_large" />
+                    app:icon="@drawable/ic_dec_large"
+                    android:onClick="@{() -> dialogViewModel.decrementStopsValueCoarse()}" />
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/buttonDecFine"
                     android:layout_width="@dimen/burn_dodge_adj_button_edge"
@@ -114,7 +115,8 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toEndOf="@id/buttonDecCoarse"
                     android:layout_marginStart="@dimen/burn_dodge_adj_button_margin"
-                    app:icon="@drawable/ic_dec_small" />
+                    app:icon="@drawable/ic_dec_small"
+                    android:onClick="@{() -> dialogViewModel.decrementStopsValueFine()}" />
                 <TextView
                     android:id="@+id/textViewStopsAdj"
                     android:layout_width="wrap_content"
@@ -140,7 +142,8 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/buttonIncCoarse"
                     android:layout_marginEnd="@dimen/burn_dodge_adj_button_margin"
-                    app:icon="@drawable/ic_inc_small" />
+                    app:icon="@drawable/ic_inc_small"
+                    android:onClick="@{() -> dialogViewModel.incrementStopsValueFine()}" />
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/buttonIncCoarse"
                     android:layout_width="@dimen/burn_dodge_adj_button_edge"
@@ -153,7 +156,8 @@
                     app:iconGravity="textStart"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:icon="@drawable/ic_inc_large" />
+                    app:icon="@drawable/ic_inc_large"
+                    android:onClick="@{() -> dialogViewModel.incrementStopsValueCoarse()}" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </FrameLayout>
 
